# WARNING: head commit changed in the meantime
commit chnages

Deserailizing XML content into Class

--- a/TestSelenium/test-output/old/Default suite/classes.html
+++ b/TestSelenium/test-output/old/Default suite/classes.html
@@ -4,14 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>edu.universit.testselenium.TestSelenium.RestTestMethod</td>
+<td>XMLClassFiles.XMLDeseralizeToClass</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>weatherTemp</td>
+<td>Sample_Person</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Sample_Person_Backup</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
