--- a/TestSelenium/test-output/emailable-report.html
+++ b/TestSelenium/test-output/emailable-report.html
@@ -36,59 +36,23 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">Default test &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">XMLClassFiles.XMLDeseralizeToClass</td><td><a href="#m1"><b>Sample_Person</b>  </a></td><td class="numi">1</td><td>1578402407740</td><td class="numi">567</td></tr>
+<tr class="failedodd"><td rowspan="1">XMLUtil.XMLDeseralizeToClass</td><td><a href="#m1"><b>Sample2</b>  </a></td><td class="numi">1</td><td>1579485061037</td><td class="numi">583</td></tr>
 </table>
 <h1>Default test</h1>
-<h2 id="m1">XMLClassFiles.XMLDeseralizeToClass:Sample_Person</h2>
+<h2 id="m1">XMLUtil.XMLDeseralizeToClass:Sample2</h2>
 <div style="padding-left:3em">
-<p>Cannot construct instance of `XMLClassFiles.RuleCalculationResultClass` (although at least one Creator exists): no String-argument constructor/factory method to deserialize from String value (&apos;[VA.Processing.Fee=299.0000000000]&apos;)
- at [Source: (StringReader); line: 18, column: 60] (through reference chain: XMLClassFiles.EnvelopeClass[&quot;Body&quot;]-&gt;java.util.ArrayList[0]-&gt;XMLClassFiles.BodyClass[&quot;CalculateResponse&quot;]-&gt;java.util.ArrayList[0]-&gt;XMLClassFiles.CalculateResponseClass[&quot;CalculateResult&quot;]-&gt;java.util.ArrayList[0]-&gt;XMLClassFiles.CalculateResultClass[&quot;Items&quot;]-&gt;java.util.ArrayList[0]-&gt;XMLClassFiles.ItemsClass[&quot;RuleCalculationResult&quot;]-&gt;java.util.ArrayList[1])</p>
-com.fasterxml.jackson.databind.exc.MismatchedInputException.from(MismatchedInputException.java:63)
-<br/>at com.fasterxml.jackson.databind.DeserializationContext.reportInputMismatch(DeserializationContext.java:1343)
-<br/>at com.fasterxml.jackson.databind.DeserializationContext.handleMissingInstantiator(DeserializationContext.java:1032)
-<br/>at com.fasterxml.jackson.databind.deser.ValueInstantiator._createFromStringFallbacks(ValueInstantiator.java:371)
-<br/>at com.fasterxml.jackson.databind.deser.std.StdValueInstantiator.createFromString(StdValueInstantiator.java:323)
-<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializerBase.deserializeFromString(BeanDeserializerBase.java:1373)
-<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializer._deserializeOther(BeanDeserializer.java:171)
-<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializer.deserialize(BeanDeserializer.java:161)
-<br/>at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:286)
-<br/>at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:245)
-<br/>at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:27)
-<br/>at com.fasterxml.jackson.databind.deser.impl.FieldProperty.deserializeAndSet(FieldProperty.java:136)
-<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializer.vanillaDeserialize(BeanDeserializer.java:288)
+<p>Unrecognized field &quot;Body&quot; (class XMLUtil.Body), not marked as ignorable (one known property: &quot;calculateResponse&quot;])
+ at [Source: (StringReader); line: 3, column: 61] (through reference chain: XMLUtil.Body[&quot;Body&quot;])</p>
+com.fasterxml.jackson.databind.exc.UnrecognizedPropertyException.from(UnrecognizedPropertyException.java:61)
+<br/>at com.fasterxml.jackson.databind.DeserializationContext.handleUnknownProperty(DeserializationContext.java:823)
+<br/>at com.fasterxml.jackson.databind.deser.std.StdDeserializer.handleUnknownProperty(StdDeserializer.java:1153)
+<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializerBase.handleUnknownProperty(BeanDeserializerBase.java:1589)
+<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializerBase.handleUnknownVanilla(BeanDeserializerBase.java:1567)
+<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializer.vanillaDeserialize(BeanDeserializer.java:294)
 <br/>at com.fasterxml.jackson.databind.deser.BeanDeserializer.deserialize(BeanDeserializer.java:151)
-<br/>at com.fasterxml.jackson.dataformat.xml.deser.WrapperHandlingDeserializer.deserialize(WrapperHandlingDeserializer.java:113)
-<br/>at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:286)
-<br/>at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:245)
-<br/>at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:27)
-<br/>at com.fasterxml.jackson.databind.deser.impl.FieldProperty.deserializeAndSet(FieldProperty.java:136)
-<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializer.vanillaDeserialize(BeanDeserializer.java:288)
-<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializer.deserialize(BeanDeserializer.java:151)
-<br/>at com.fasterxml.jackson.dataformat.xml.deser.WrapperHandlingDeserializer.deserialize(WrapperHandlingDeserializer.java:113)
-<br/>at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:286)
-<br/>at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:245)
-<br/>at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:27)
-<br/>at com.fasterxml.jackson.databind.deser.impl.FieldProperty.deserializeAndSet(FieldProperty.java:136)
-<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializer.vanillaDeserialize(BeanDeserializer.java:288)
-<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializer.deserialize(BeanDeserializer.java:151)
-<br/>at com.fasterxml.jackson.dataformat.xml.deser.WrapperHandlingDeserializer.deserialize(WrapperHandlingDeserializer.java:113)
-<br/>at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:286)
-<br/>at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:245)
-<br/>at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:27)
-<br/>at com.fasterxml.jackson.databind.deser.impl.FieldProperty.deserializeAndSet(FieldProperty.java:136)
-<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializer.vanillaDeserialize(BeanDeserializer.java:288)
-<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializer.deserialize(BeanDeserializer.java:151)
-<br/>at com.fasterxml.jackson.dataformat.xml.deser.WrapperHandlingDeserializer.deserialize(WrapperHandlingDeserializer.java:113)
-<br/>at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:286)
-<br/>at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:245)
-<br/>at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:27)
-<br/>at com.fasterxml.jackson.databind.deser.impl.FieldProperty.deserializeAndSet(FieldProperty.java:136)
-<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializer.vanillaDeserialize(BeanDeserializer.java:288)
-<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializer.deserialize(BeanDeserializer.java:151)
-<br/>at com.fasterxml.jackson.dataformat.xml.deser.WrapperHandlingDeserializer.deserialize(WrapperHandlingDeserializer.java:113)
 <br/>at com.fasterxml.jackson.databind.ObjectMapper._readMapAndClose(ObjectMapper.java:4013)
 <br/>at com.fasterxml.jackson.databind.ObjectMapper.readValue(ObjectMapper.java:3004)
-<br/>at XMLClassFiles.XMLDeseralizeToClass.Sample_Person(XMLDeseralizeToClass.java:36)
+<br/>at XMLUtil.XMLDeseralizeToClass.Sample2(XMLDeseralizeToClass.java:21)
 <br/>25 lines not shown
 </div>
 <p class="totop"><a href="#summary">back to summary</a></p>
