--- a/TestSelenium/test-output/emailable-report.html
+++ b/TestSelenium/test-output/emailable-report.html
@@ -31,29 +31,14 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">0.6 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0.8 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Default test &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">XMLUtil.XMLDeseralizeToClass</td><td><a href="#m1"><b>Sample2</b>  </a></td><td class="numi">1</td><td>1579485061037</td><td class="numi">583</td></tr>
+<tr><th colspan="4">Default test &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="1">databaseConnection.SQLServerConnection</td><td><a href="#m1"><b>testmethod</b>  </a></td><td class="numi">1</td><td>1581078262116</td><td class="numi">787</td></tr>
 </table>
 <h1>Default test</h1>
-<h2 id="m1">XMLUtil.XMLDeseralizeToClass:Sample2</h2>
-<div style="padding-left:3em">
-<p>Unrecognized field &quot;Body&quot; (class XMLUtil.Body), not marked as ignorable (one known property: &quot;calculateResponse&quot;])
- at [Source: (StringReader); line: 3, column: 61] (through reference chain: XMLUtil.Body[&quot;Body&quot;])</p>
-com.fasterxml.jackson.databind.exc.UnrecognizedPropertyException.from(UnrecognizedPropertyException.java:61)
-<br/>at com.fasterxml.jackson.databind.DeserializationContext.handleUnknownProperty(DeserializationContext.java:823)
-<br/>at com.fasterxml.jackson.databind.deser.std.StdDeserializer.handleUnknownProperty(StdDeserializer.java:1153)
-<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializerBase.handleUnknownProperty(BeanDeserializerBase.java:1589)
-<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializerBase.handleUnknownVanilla(BeanDeserializerBase.java:1567)
-<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializer.vanillaDeserialize(BeanDeserializer.java:294)
-<br/>at com.fasterxml.jackson.databind.deser.BeanDeserializer.deserialize(BeanDeserializer.java:151)
-<br/>at com.fasterxml.jackson.databind.ObjectMapper._readMapAndClose(ObjectMapper.java:4013)
-<br/>at com.fasterxml.jackson.databind.ObjectMapper.readValue(ObjectMapper.java:3004)
-<br/>at XMLUtil.XMLDeseralizeToClass.Sample2(XMLDeseralizeToClass.java:21)
-<br/>25 lines not shown
-</div>
+<h2 id="m1">databaseConnection.SQLServerConnection:testmethod</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
