--- a/TestSelenium/test-output/old/Default suite/classes.html
+++ b/TestSelenium/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>XMLUtil.XMLDeseralizeToClass</td>
+<td>databaseConnection.SQLServerConnection</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Sample2</td>
+<td>testmethod</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
