--- a/TestSelenium/test-output/old/Default suite/methods.html
+++ b/TestSelenium/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8a60e3">  <td>20/01/20 07:21:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XMLDeseralizeToClass.Sample2()[pri:0, instance:XMLUtil.XMLDeseralizeToClass@d8355a8]">Sample2</td> 
-  <td>main@1447689627</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>20/02/07 17:54:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SQLServerConnection.testmethod()[pri:0, instance:databaseConnection.SQLServerConnection@28d25987]">testmethod</td> 
+  <td>main@764577347</td>   <td></td> </tr>
 </table>
